# tjsp_correcao_monetaria

./: MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/: publish-post.yml  publish-to-pypi.yml  publish-to-test-pypi.yml
.github/workflows/: publish-to-pypi-uv.yml  python-script.yml
docs/: .readthedocs.yaml  index.md
docs/pages/: outros-usos.md
docs/scripts/: como-usar.ipynb  tjsp_cache.sqlite
scripts/: tjsp_update.ipynb
tjsp/: __init__.py  table.py  tjsp_dates.py  tjsp_update.py  update.py
tjsp/data/: tabela_debitos_judiciais.csv
